<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/ok"
        android:padding="15sp"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/host"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/hostEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/exipaddr"
            android:inputType="textUri"
            android:padding="10sp" />

        <Button
            android:id="@+id/connectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/connect"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/hostsLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/hosts"
        android:textSize="12sp" />

</LinearLayout>