<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/linearmetersperturn"
        android:textStyle="bold"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/linmetEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entermessage"
        android:inputType="numberDecimal"
        android:padding="5sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/instantspeed"
        android:textStyle="bold"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/instspeedEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entermessage"
        android:inputType="numberDecimal"
        android:padding="5sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/averagespeed"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/avgspeedEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entermessage"
        android:inputType="numberDecimal"
        android:padding="5sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/deadtimepershift"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/deadtimeEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entermessage"
        android:inputType="numberDecimal"
        android:padding="5sp" />

</LinearLayout>