<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/actualspeed"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/actualSpeedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/actualspeed"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/averagespeed"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/avgSpeedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/averagespeed"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/deadtimetotal"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/deadTimeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/deadtimetotal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/linearmeterstotal"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/linMtsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/linearmeterstotal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/laststop"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lastStopText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/laststop"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/elapsed"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/elapsedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/elapsed"
        android:textSize="20sp" />

</LinearLayout>